@@ -30,6 +30,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|FileNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -1089,7 +1099,7 @@ name|Configuration
 name|conf
 parameter_list|)
 block|{
-comment|// Checking the existance of the TLD
+comment|// Checking the existence of the TLD
 name|FileSystem
 name|remoteFS
 init|=
@@ -1126,49 +1136,8 @@ block|}
 name|boolean
 name|remoteExists
 init|=
-literal|false
+literal|true
 decl_stmt|;
-try|try
-block|{
-name|remoteExists
-operator|=
-name|remoteFS
-operator|.
-name|exists
-argument_list|(
-name|this
-operator|.
-name|remoteRootLogDir
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|YarnException
-argument_list|(
-literal|"Failed to check for existence of remoteLogDir ["
-operator|+
-name|this
-operator|.
-name|remoteRootLogDir
-operator|+
-literal|"]"
-argument_list|,
-name|e
-argument_list|)
-throw|;
-block|}
-if|if
-condition|(
-name|remoteExists
-condition|)
-block|{
 try|try
 block|{
 name|FsPermission
@@ -1226,6 +1195,17 @@ block|}
 block|}
 catch|catch
 parameter_list|(
+name|FileNotFoundException
+name|e
+parameter_list|)
+block|{
+name|remoteExists
+operator|=
+literal|false
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
 name|IOException
 name|e
 parameter_list|)
@@ -1246,8 +1226,11 @@ name|e
 argument_list|)
 throw|;
 block|}
-block|}
-else|else
+if|if
+condition|(
+operator|!
+name|remoteExists
+condition|)
 block|{
 name|LOG
 operator|.
