@@ -3087,6 +3087,153 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testVerifyAndCreateRemoteDirNonExistence ()
+specifier|public
+name|void
+name|testVerifyAndCreateRemoteDirNonExistence
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|this
+operator|.
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_LOG_DIRS
+argument_list|,
+name|localLogDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|File
+name|aNewFile
+init|=
+operator|new
+name|File
+argument_list|(
+name|String
+operator|.
+name|valueOf
+argument_list|(
+literal|"tmp"
+operator|+
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|this
+operator|.
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_REMOTE_APP_LOG_DIR
+argument_list|,
+name|aNewFile
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|DrainDispatcher
+name|dispatcher
+init|=
+name|createDispatcher
+argument_list|()
+decl_stmt|;
+name|LogAggregationService
+name|logAggregationService
+init|=
+name|spy
+argument_list|(
+operator|new
+name|LogAggregationService
+argument_list|(
+name|dispatcher
+argument_list|,
+name|this
+operator|.
+name|context
+argument_list|,
+name|this
+operator|.
+name|delSrvc
+argument_list|,
+name|super
+operator|.
+name|dirsHandler
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|logAggregationService
+operator|.
+name|init
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|)
+expr_stmt|;
+name|boolean
+name|existsBefore
+init|=
+name|aNewFile
+operator|.
+name|exists
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"The new file already exists!"
+argument_list|,
+operator|!
+name|existsBefore
+argument_list|)
+expr_stmt|;
+name|logAggregationService
+operator|.
+name|verifyAndCreateRemoteLogDir
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|)
+expr_stmt|;
+name|boolean
+name|existsAfter
+init|=
+name|aNewFile
+operator|.
+name|exists
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"The new aggregate file is not successfully created"
+argument_list|,
+name|existsAfter
+argument_list|)
+expr_stmt|;
+name|aNewFile
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+comment|//housekeeping
+block|}
+annotation|@
+name|Test
 annotation|@
 name|SuppressWarnings
 argument_list|(
